Stop confirm for location

--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -28,7 +28,7 @@
 
 <%= render 'shared/poem' %>
 <%= render 'shared/music' %>
-<% puts "This is the event #{@event}" %>
+<%= render 'shared/event' %>
 
 
 
