--- a/app/views/spotify_users/view.html.erb
+++ b/app/views/spotify_users/view.html.erb
@@ -3,6 +3,7 @@
 <div class="profile-container">
   <h2>Your</h2>
   <h2 class="profile-header">Moods</h2>
+  <% if current_spotify_user.entries.present? %>
   <div class="table-wrapper">
     <table class="mood-table">
       <tr>
@@ -13,9 +14,12 @@
       <tr class="rows">
         <td><%= link_to image_tag("emojis/#{e.mood}"), entry_path(e.id) %></td>
         <td><%= e.created_at.to_date.strftime("%m/%d/%y") %></td>
-      <% end %>
       </tr>
+      <% end %>
     </table>
+    <% else %>
+    <h1 class="mood-header">No moods saved...</h1>
+    <% end %>
   </div>
 </div>
 
